Add legal notice

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,6 +74,39 @@ import { SITE_TITLE } from '../config'
           Malagasy, Malay, Norwegian, Polish, Portuguese, Romanian, Russian,
           Slovenian, Spanish, Swedish, Turkish, Ukrainian, Welsh
         </blockquote>
+
+        <h2>Is it legal?</h2>
+        <p>Yes!</p>
+        <p>
+          Board games are generally not protected intelectual property. What is
+          protected, with copyright, are the assets they use, like: cards,
+          tokens, boards or rulebooks.
+        </p>
+        <p>
+          Explaining how to play a board game is legal, as long as you don't use
+          copyrighted material to do so.
+        </p>
+        <p>
+          Some game mechanics may be pattented, but it's very rare (and anyways,
+          this deck doesn't include any mechanic at all).
+        </p>
+        <p>
+          Selling/buying or printing the DIY Multideck is legal, even if the
+          porpouse is to play other games.
+        </p>
+        <p>
+          All this website, with explanations of how to play other games, an all
+          it's contents, is totally legit.
+        </p>
+        <p>
+          About the trademarks; in this case, using other board games names and
+          logos is fare use because it's "Informational use", also called
+          "editorial use".
+        </p>
+        <p>
+          About the copyright; in this case, no assets from the game are used in
+          the deck or this website.
+        </p>
       </div>
     </section>
 
