--- a/src/components/GameMappingDetails.astro
+++ b/src/components/GameMappingDetails.astro
@@ -14,7 +14,7 @@ const { game, mapping } = Astro.props
 ---
 
 <div
-  class="bg-white-200 text-black dark:bg-[#0d1115] dark:border-[#192129] shadow-lg border dark:shadow-none border-stone-200 dark:text-white flex flex-wrap justify-center p-6 gap-6 rounded-2xl"
+  class="bg-white-200 text-black dark:bg-[#0d1115] items-start dark:border-[#192129] shadow-lg border dark:shadow-none border-stone-200 dark:text-white flex flex-wrap justify-center p-6 gap-6 rounded-2xl"
 >
   <img
     class="grow-0 m-0 max-h-64 max-w-[50vw] rounded border shadow border-stone-200 dark:border-[#192129]"
