Update title for seo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,10 @@ import { SITE_TITLE } from '../config'
 ---
 
 <PageLayout>
-  <PageMeta title={`${SITE_TITLE} | Homepage`} slot="meta" />
+  <PageMeta
+    title={`${SITE_TITLE} | A game system to play hundreds of board games`}
+    slot="meta"
+  />
 
   <Fragment slot="main">
     <section class="mb-8">
