--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -52,7 +52,17 @@ const sortedPosts = posts.sort(
       ></i>
     </div>
 
-    <ul class="unset space-y-4 mt-8">
+    <p class="text-xl font-bold mt-8 mb-4" id="games-count-no-search">
+      {sortedPosts.length} games in total
+    </p>
+
+    <p class="hidden text-xl font-bold mt-8 mb-4" id="games-count-search">
+      Showing <span id="games-count-showing">{sortedPosts.length}</span> out of <span
+        >{sortedPosts.length}</span
+      > games
+    </p>
+
+    <ul class="unset space-y-4">
       {
         sortedPosts.map(({ frontmatter: { game, mapping }, slug }) => (
           <li
@@ -105,8 +115,23 @@ const sortedPosts = posts.sort(
     'no-results'
   ) as HTMLDivElement | null
   if (!noResultsElement) throw new Error("no-results element doesn't exist")
+  const gamesCountNoSearchElement = document.getElementById(
+    'games-count-no-search'
+  ) as HTMLDivElement | null
+  if (!gamesCountNoSearchElement)
+    throw new Error("games-count-no-search element doesn't exist")
+  const gamesCountSearchElement = document.getElementById(
+    'games-count-search'
+  ) as HTMLDivElement | null
+  if (!gamesCountSearchElement)
+    throw new Error("games-count-search element doesn't exist")
+  const gamesCountShowingElement = document.getElementById(
+    'games-count-showing'
+  ) as HTMLDivElement | null
+  if (!gamesCountShowingElement)
+    throw new Error("games-count-showing element doesn't exist")
 
-  searchInput.addEventListener('keyup', () => {
+  searchInput.addEventListener('input', () => {
     const elements = document.querySelectorAll<HTMLElement>('[data-searchable]')
     elements.forEach((element) => {
       const elementTextNormalized =
@@ -126,6 +151,21 @@ const sortedPosts = posts.sort(
         element.classList.add('hidden')
       }
     })
+
+    // Update count
+    const visibleElements = document.querySelectorAll<HTMLElement>(
+      '[data-searchable]:not(.hidden)'
+    )
+    if (visibleElements.length === elements.length) {
+      gamesCountNoSearchElement.classList.remove('hidden')
+      gamesCountSearchElement.classList.add('hidden')
+    } else {
+      gamesCountNoSearchElement.classList.add('hidden')
+      gamesCountSearchElement.classList.remove('hidden')
+    }
+    gamesCountShowingElement.innerText = visibleElements.length.toFixed(0)
+
+    // Update empty block
     if (
       [...elements].every((element) => element.classList.contains('hidden'))
     ) {
