Rename game name to title

--- a/src/components/GameMappingDetails.astro
+++ b/src/components/GameMappingDetails.astro
@@ -22,7 +22,7 @@ const { game, mapping } = Astro.props
   />
   <div class="grow basis-40">
     <a href={game.bgg} class="!bg-none text-current text-3xl"
-      ><span>{game.name}</span><i class="ti ti-external-link ml-1"></i></a
+      ><span>{game.title}</span><i class="ti ti-external-link ml-1"></i></a
     >
     <p>{game.description}</p>
 
