--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -11,11 +11,13 @@ const posts = await readAll({
   frontmatterSchema: gameSchema,
 })
 
-const sortedPosts = posts.sort(
-  (a, b) =>
-    new Date(b.frontmatter.post.date).valueOf() -
-    new Date(a.frontmatter.post.date).valueOf()
-)
+const sortedPosts = posts
+  .filter((p) => p.frontmatter.post.draft !== true)
+  .sort(
+    (a, b) =>
+      new Date(b.frontmatter.post.date).valueOf() -
+      new Date(a.frontmatter.post.date).valueOf()
+  )
 ---
 
 <PageLayout>
