Coming soon texts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -199,8 +199,8 @@ import { SITE_TITLE } from '../config'
           <img src="/images/home/drawing-areas.png" alt="drawing-areas" />
           <div>
             <p>
-              Check your <a href="/blog/mapping-guide">this blog post</a> about tips
-              to create your own game mappings and more details about this topic.
+              In the future, we'll release a blog post about tips to create your
+              own game mappings and more details about this topic.
             </p>
             <p>
               As shown in the image, each card has 14-16 drawing drawing slots,
@@ -653,12 +653,12 @@ import { SITE_TITLE } from '../config'
         </ul>
         <h3 id="inspiration">Inspiration</h3>
         <blockquote>
-          <p>Read more in the blog post</p>
+          <p>In the future, we'll release a blog post about this topic.</p>
         </blockquote>
         <p>Explain everdeck, rainbow deck and some more.</p>
         <h3 id="printing">Printing</h3>
         <blockquote>
-          <p>Read more in the blog post</p>
+          <p>In the future, we'll release a blog post about this topic.</p>
         </blockquote>
         <p>Designed to be ready to print</p>
         <h3 id="is-it-legal-">Is it legal?</h3>
