--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -655,12 +655,15 @@ import { SITE_TITLE } from '../config'
         <blockquote>
           <p>In the future, we'll release a blog post about this topic.</p>
         </blockquote>
-        <p>Explain everdeck, rainbow deck and some more.</p>
+        <p>A short spoiler: from The Everdeck and Rainbow deck mainly.</p>
         <h3 id="printing">Printing</h3>
         <blockquote>
           <p>In the future, we'll release a blog post about this topic.</p>
         </blockquote>
-        <p>Designed to be ready to print</p>
+        <p>
+          A short spoiler: Designed to be to printable at home or basic copy
+          shop.
+        </p>
         <h3 id="is-it-legal-">Is it legal?</h3>
         <p>
           <strong>Yes!</strong> Selling/buying or printing the DIY Multideck is legal,
