--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -66,9 +66,9 @@ const sortedPosts = posts
 
     <ul class="unset space-y-4">
       {
-        sortedPosts.map(({ frontmatter: { game, mapping }, slug }) => (
+        sortedPosts.map(({ frontmatter: { game, mapping, post }, slug }) => (
           <li
-            data-searchable={`${game.title}---${game.keywords.join('---')}`}
+            data-searchable={`${game.title}---${post.keywords.join('---')}`}
             class="text-xl font-bold rounded-lg p-0 border bg-white dark:bg-[#0d1115] border-stone-200 dark:border-[#192129] shadow-lg dark:shadow-none"
           >
             <a
