--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -68,7 +68,7 @@ const sortedPosts = posts
       {
         sortedPosts.map(({ frontmatter: { game, mapping, post }, slug }) => (
           <li
-            data-searchable={`${game.title}---${post.keywords.join('---')}`}
+            data-searchable={`${game.title}---${post.keywords?.join('---') ?? ''}`}
             class="text-xl font-bold rounded-lg p-0 border bg-white dark:bg-[#0d1115] border-stone-200 dark:border-[#192129] shadow-lg dark:shadow-none"
           >
             <a
