--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -81,35 +81,57 @@ const sortedPosts = posts
                 class="grow-0 m-0 max-h-[12rem] max-w-[6rem] rounded shadow border border-stone-200 dark:border-[#192129]"
                 src={game.image}
               />
-              <div class="leading-normal">
-                <span class="block">{game.title}</span>
-                <div class="font-normal text-base text-stone-700 dark:text-[#8da1b6] leading-inherit">
-                  <span class="block">
-                    {getCompatibility(mapping.compatibility)} compatibility
-                  </span>
-                  <span class="block">
-                    {mapping.requiredCardsCount} cards -
-                    {mapping.requiredDrawingsCount}{' '}
-                    <span>
-                      drawing{mapping.requiredDrawingsCount === 1 ? '' : 's'}
-                    </span>
-                  </span>
+              <div class="leading-normal grow">
+                <span class="block leading-5">{game.title}</span>
+                
+                <div class="font-normal text-base text-stone-700 dark:text-stone-200 leading-inherit">
+                  <p class="text-sm sm:text-base my-1">{game.description}</p>
+                  
+                  <div class="grid grid-cols-3 mb-3">
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                        <i class="ti ti-discount-check" />
+                        <span><span>{getCompatibility(mapping.compatibility)}</span> <span class="hidden sm:inline-block text-sm text-stone-600 dark:text-stone-300">compatibility</span></span>
+                    </div>
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                      <i class="ti ti-cards" />
+                      <span><span>{mapping.requiredCardsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">cards</span></span>
+                      </div>
+                      <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                        <i class="ti ti-brush" />
+                        <span><span>{mapping.requiredDrawingsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">drawing{mapping.requiredDrawingsCount === 1 ? '' : 's'}</span></span>
+                      </div>
+                  </div>
 
-                  {game.players && (
-                    <span class="block">{game.players} payers</span>
-                  )}
-                  {game.time && <span class="block">{game.time} min</span>}
-                  {game.complexity && (
-                    <span class="block">{game.complexity} / 5 Complexity</span>
-                  )}
-                  {game.mechanics && (
-                    <span class="block">
-                      <span class="text-stone-700 dark:text-[#8da1b6]">
-                        Mechanics:
-                      </span>
-                      {game.mechanics.join(', ')}.
-                    </span>
-                  )}
+                  <div class="grid grid-cols-3">
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                      {game.players && (
+                        <i class="ti ti-users" />
+                        <span><span>{game.players}</span> <span class="text-sm text-stone-600 dark:text-stone-300">payers</span></span>
+                      )}
+                    </div>
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                      {game.time && (
+                        <i class="ti ti-clock" />
+                      <span><span>{game.time}</span> <span class="text-sm text-stone-600 dark:text-stone-300">min</span></span>
+                      )}
+                    </div>
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                      {game.complexity && (
+                        <i class="ti ti-brain" />
+                        <span>
+                          {game.complexity}<span class="text-sm text-stone-400 dark:text-stone-400">/5</span> <span class="hidden sm:inline-block text-sm text-stone-600 dark:text-stone-300">Complexity</span>
+                        </span>
+                      )}
+                    </div>
+                  </div>
+
+                  <div class="hidden sm:flex gap-1 flex-wrap text-sm mt-3">
+                    {
+                      game.mechanics?.map((mechanic) => (
+                        <span class="px-2 py-1 leading-3 rounded-md bg-stone-100 dark:bg-stone-900">{mechanic}</span>
+                      ))
+                    }
+                  </div>
                 </div>
               </div>
             </a>
