--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -75,54 +75,52 @@ const sortedPosts = posts
           >
             <a
               href={`/games/${slug}`}
-              class="flex unset hover:text-text-link items-center gap-4 p-2"
+              class="unset"
             >
+            <article class="p-3 sm:p-4" >
+              <h1 class="block leading-3">{game.title}</h1>
+              <p class="text-sm sm:text-base font-normal mt-2 mb-2">{game.description}</p>
+              
+              <div class="flex items-center gap-3 sm:gap-4">
               <img
                 class="grow-0 m-0 max-h-[12rem] max-w-[6rem] rounded shadow border border-stone-200 dark:border-[#192129]"
                 src={game.image}
               />
               <div class="leading-normal grow">
-                <span class="block leading-5">{game.title}</span>
-                
                 <div class="font-normal text-base text-stone-700 dark:text-stone-200 leading-inherit">
-                  <p class="text-sm sm:text-base my-1">{game.description}</p>
-                  
-                  <div class="grid grid-cols-3 mb-3">
-                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
-                        <i class="ti ti-discount-check" />
-                        <span><span>{getCompatibility(mapping.compatibility)}</span> <span class="hidden sm:inline-block text-sm text-stone-600 dark:text-stone-300">compatibility</span></span>
-                    </div>
-                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
-                      <i class="ti ti-cards" />
-                      <span><span>{mapping.requiredCardsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">cards</span></span>
-                      </div>
-                      <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
-                        <i class="ti ti-brush" />
-                        <span><span>{mapping.requiredDrawingsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">drawing{mapping.requiredDrawingsCount === 1 ? '' : 's'}</span></span>
-                      </div>
-                  </div>
-
-                  <div class="grid grid-cols-3">
+                  <div class="grid grid-cols-3 gap-2">
                     <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
                       {game.players && (
                         <i class="ti ti-users" />
-                        <span><span>{game.players}</span> <span class="text-sm text-stone-600 dark:text-stone-300">payers</span></span>
+                        <span><span class="font-[450]">{game.players}</span> <span class="text-sm text-stone-600 dark:text-stone-300">payers</span></span>
                       )}
                     </div>
                     <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
                       {game.time && (
                         <i class="ti ti-clock" />
-                      <span><span>{game.time}</span> <span class="text-sm text-stone-600 dark:text-stone-300">min</span></span>
+                      <span><span class="font-[450]">{game.time}</span> <span class="text-sm text-stone-600 dark:text-stone-300">min</span></span>
                       )}
                     </div>
                     <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
                       {game.complexity && (
                         <i class="ti ti-brain" />
-                        <span>
+                        <span class="font-[450]">
                           {game.complexity}<span class="text-sm text-stone-400 dark:text-stone-400">/5</span> <span class="hidden sm:inline-block text-sm text-stone-600 dark:text-stone-300">Complexity</span>
                         </span>
                       )}
                     </div>
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                        <i class="ti ti-discount-check" />
+                        <span><span class="font-[450]">{getCompatibility(mapping.compatibility)}</span> <span class="text-sm text-stone-600 dark:text-stone-300">compatibility</span></span>
+                    </div>
+                    <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                      <i class="ti ti-cards" />
+                      <span><span class="font-[450]">{mapping.requiredCardsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">cards</span></span>
+                      </div>
+                      <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
+                        <i class="ti ti-brush" />
+                        <span><span class="font-[450]">{mapping.requiredDrawingsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">drawing{mapping.requiredDrawingsCount === 1 ? '' : 's'}</span></span>
+                      </div>
                   </div>
 
                   <div class="hidden sm:flex gap-1 flex-wrap text-sm mt-3">
@@ -134,6 +132,8 @@ const sortedPosts = posts
                   </div>
                 </div>
               </div>
+                </div>
+              </article>
             </a>
           </li>
         ))
