--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -92,7 +92,7 @@ const sortedPosts = posts
                     <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
                       {game.players && (
                         <i class="ti ti-users" />
-                        <span><span class="font-[450]">{game.players}</span> <span class="text-sm text-stone-600 dark:text-stone-300">payers</span></span>
+                        <span><span class="font-[450]">{game.players}</span> <span class="text-sm text-stone-600 dark:text-stone-300">players</span></span>
                       )}
                     </div>
                     <div class="flex flex-wrap sm:flex-nowrap sm:justify-start flex-col sm:flex-row gap-1 leading-3 text-center justify-center sm:text-left items-center">
