--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -399,7 +399,7 @@ import { SITE_TITLE } from '../config'
         <h3 id="points-value">Points value</h3>
         <p>
           At the bottom of the bottom-right corner, there are a set of dots,
-          those arwe the Points value.
+          those are the Points value.
         </p>
         <p>
           Point values are distributed equally across suits. Specifically, each
