--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -411,6 +411,7 @@ import { SITE_TITLE } from '../config'
           A card's point value also indicate the score of the letter in the
           card. Most letters have one or two possible point values, with rarer
           letters having higher average scores.
+          <!-- TODO: explain better this phrase -->
         </p>
         <p>
           This distribution is copied from <a
@@ -433,7 +434,7 @@ import { SITE_TITLE } from '../config'
           You can add a title to the counter by writing it in the area A of a
           card and putting it below. Don't overuse this technique or you'll run
           out of space, for example, if every player only has to count coins,
-          don't put titles on the counters, it's assumed they are points.
+          don't put titles on the counters, it's assumed they are coins.
         </p>
         <ul class="unset">
           <li>
@@ -477,6 +478,7 @@ import { SITE_TITLE } from '../config'
           This arrangement also displays the numbers in ascending order. Also,
           the letters are in alphabetical order, and the special letters and
           symbols are at the end.
+          <!-- TODO: wrong sentence, fix -->
         </p>
         <p>
           <img
